// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelDetails /> as a moderator should render and test snapshot 1`] = `
<div
  class="channeldetails"
>
  <h1
    class="channeldetails__name"
  >
    channel name
  </h1>
  <div
    class="channeldetails__description"
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  >
    <em>
      something about this channel
    </em>
  </div>
  <div
    class="channeldetails__user"
  >
    <img
      alt="[object Object] profile"
      class="channeldetails__userprofileimage"
      data-content="users/userid1"
      src="channeluser1pic.png"
    />
    <a
      data-content="users/by_username?url=channeluser1"
      href="/channeluser1"
      style={
        Object {
          "color": undefined,
          "padding": "3px 0px",
        }
      }
    >
      channel user 1
    </a>
  </div>
  <div
    class="channeldetails__user"
  >
    <img
      alt="[object Object] profile"
      class="channeldetails__userprofileimage"
      data-content="users/userid2"
      src="channeluser2pic.png"
    />
    <a
      data-content="users/by_username?url=channeluser2"
      href="/channeluser2"
      style={
        Object {
          "color": undefined,
          "padding": "3px 0px",
        }
      }
    >
      channel user 2
    </a>
  </div>
  <div
    class="channeldetails__inviteusers"
  >
    <h2>
      Invite Members
    </h2>
    <input
      onKeyUp={[Function]}
      placeholder="Find users"
    />
    <h2>
      Pending Invites:
    </h2>
    <div
      class="channeldetails__pendingusers"
    >
      <a
        data-content="users/pendinguserid1"
        href="/pendinguser1"
        rel="noopener noreferrer"
        target="_blank"
      >
        @pendinguser1 - pending user 1
      </a>
    </div>
    <div
      class="channeldetails__pendingusers"
    >
      <a
        data-content="users/pendinguserid2"
        href="/pendinguser2"
        rel="noopener noreferrer"
        target="_blank"
      >
        @pendinguser2 - pending user 2
      </a>
    </div>
    <div
      style={
        Object {
          "marginTop": "10px",
        }
      }
    >
      All functionality is early beta. Contact us if you need help with anything.
    </div>
  </div>
</div>
`;

exports[`<ChannelDetails /> as a moderator should search users and populate searched users div 1`] = `
preact-render-spy (1 nodes)
-------
<div class="channeldetails">
  <h1 class="channeldetails__name">channel name</h1>
  <div
    class="channeldetails__description"
    style="margin-bottom: 20px;"
  >
    <em>something about this channel</em>
  </div>
  <div class="channeldetails__user">
    <img
      class="channeldetails__userprofileimage"
      src="channeluser1pic.png"
      alt="[object Object] profile"
      data-content="users/userid1"
     />
    <a
      href="/channeluser1"
      style="padding: 3px 0px;"
      data-content="users/by_username?url=channeluser1"
    >
      channel user 1
    </a>
  </div>
  <div class="channeldetails__user">
    <img
      class="channeldetails__userprofileimage"
      src="channeluser2pic.png"
      alt="[object Object] profile"
      data-content="users/userid2"
     />
    <a
      href="/channeluser2"
      style="padding: 3px 0px;"
      data-content="users/by_username?url=channeluser2"
    >
      channel user 2
    </a>
  </div>
  <div class="channeldetails__inviteusers">
    <h2>Invite Members</h2>
    <input
      onKeyUp={[Function value]}
      placeholder="Find users"
     />
    <div class="channeldetails__searchedusers">
      <a
        href="/user_path1"
        target="_blank"
        rel="noopener noreferrer"
      >
        <img
          alt="profile_image"
          src="channeluser1pic.png"
         />
        @channeluser1 - channel user 1
      </a>
       
      <span class="channel__member">is already in channel name</span>
    </div>
    <div class="channeldetails__searchedusers">
      <a
        href="/search_path3"
        target="_blank"
        rel="noopener noreferrer"
      >
        <img
          alt="profile_image"
          src="searcheduser3pic.png"
         />
        @searcheduser3 - searched user 3
      </a>
       
      <button
        type="button"
        onClick={[Function value]}
        data-content="searched_userid3"
      >
        Invite
      </button>
    </div>
    <h2>Pending Invites:</h2>
    <div class="channeldetails__pendingusers">
      <a
        href="/pendinguser1"
        target="_blank"
        rel="noopener noreferrer"
        data-content="users/pendinguserid1"
      >
        @pendinguser1 - pending user 1
      </a>
    </div>
    <div class="channeldetails__pendingusers">
      <a
        href="/pendinguser2"
        target="_blank"
        rel="noopener noreferrer"
        data-content="users/pendinguserid2"
      >
        @pendinguser2 - pending user 2
      </a>
    </div>
    <div style="margin-top: 10px;">
      All functionality is early beta. Contact us if you need help with anything.
    </div>
  </div>
</div>

`;

exports[`<ChannelDetails /> as a user should leave channel and show appropriate message 1`] = `
preact-render-spy (1 nodes)
-------
<div class="channeldetails">
  <h1 class="channeldetails__name">channel name</h1>
  <div
    class="channeldetails__description"
    style="margin-bottom: 20px;"
  >
    <em>something about this channel</em>
  </div>
  <div class="channeldetails__user">
    <img
      class="channeldetails__userprofileimage"
      src="channeluser1pic.png"
      alt="[object Object] profile"
      data-content="users/userid1"
     />
    <a
      href="/channeluser1"
      style="padding: 3px 0px;"
      data-content="users/by_username?url=channeluser1"
    >
      channel user 1
    </a>
  </div>
  <div class="channeldetails__user">
    <img
      class="channeldetails__userprofileimage"
      src="channeluser2pic.png"
      alt="[object Object] profile"
      data-content="users/userid2"
     />
    <a
      href="/channeluser2"
      style="padding: 3px 0px;"
      data-content="users/by_username?url=channeluser2"
    >
      channel user 2
    </a>
  </div>
  <div class="channeldetails__leftchannel">
    <h2>Danger Zone</h2>
    <h3>
      You have left this channel 
      <span
        role="img"
        aria-label="emoji"
      >
        😢😢😢
      </span>
    </h3>
    <h4>It may not be immediately in the sidebar</h4>
    <p>
      Contact the admins at 
      <a href="mailto:yo@dev.to">yo@dev.to</a>
       if this was a mistake
    </p>
  </div>
</div>

`;

exports[`<ChannelDetails /> as a user should render and test snapshot 1`] = `
<div
  class="channeldetails"
>
  <h1
    class="channeldetails__name"
  >
    channel name
  </h1>
  <div
    class="channeldetails__description"
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  >
    <em>
      something about this channel
    </em>
  </div>
  <div
    class="channeldetails__user"
  >
    <img
      alt="[object Object] profile"
      class="channeldetails__userprofileimage"
      data-content="users/userid1"
      src="channeluser1pic.png"
    />
    <a
      data-content="users/by_username?url=channeluser1"
      href="/channeluser1"
      style={
        Object {
          "color": undefined,
          "padding": "3px 0px",
        }
      }
    >
      channel user 1
    </a>
  </div>
  <div
    class="channeldetails__user"
  >
    <img
      alt="[object Object] profile"
      class="channeldetails__userprofileimage"
      data-content="users/userid2"
      src="channeluser2pic.png"
    />
    <a
      data-content="users/by_username?url=channeluser2"
      href="/channeluser2"
      style={
        Object {
          "color": undefined,
          "padding": "3px 0px",
        }
      }
    >
      channel user 2
    </a>
  </div>
  <div
    class="channeldetails__leavechannel"
  >
    <h2>
      Danger Zone
    </h2>
    <button
      Click={[Function]}
      data-content="12345"
      type="button"
    >
      Leave Channel
    </button>
  </div>
</div>
`;
